# Dropbox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/include/: clientSocket.h  dropboxClient.h  monitor.h  synchronizer.h
src/client/src/: clientSocket.cpp  dropboxClient.cpp  main.cpp
src/client/test/: CMakeLists.txt
src/client/test/src/: clientLibTest.cpp
src/lib/: CMakeLists.txt
src/lib/include/: fileop.h  socket.h
src/lib/src/: fileop.cpp  socket.cpp
src/lib/test/: CMakeLists.txt
src/lib/test/data/test_dir2/: file_3.txt
src/lib/test/src/: GTestMain.cpp  dirScanTest.cpp
src/server/: CMakeLists.txt
src/server/include/: dropboxServer.h  serverSocket.h  synchronizer.h
src/server/src/: dropboxServer.cpp  main.cpp  serverSocket.cpp
test_integration/: CMakeLists.txt
test_integration/data/test_srcDir/: file2.txt
test_integration/include/: testUtils.h
test_integration/src/: GTestMain.cpp  fileDeletionTest.cpp  filesAndDirectoryAdditionTest.cpp  multipleFilesAdditionTest.cpp  singleFileAdditionTest.cpp  sync_test.cpp
